--- a/service/pom.xml
+++ b/service/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>service-product</module>
         <module>service-item</module>
+        <module>service-test</module>
     </modules>
 
 
@@ -28,12 +29,6 @@
             <groupId>com.atguigu.gmall</groupId>
             <artifactId>model</artifactId>
             <version>1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.atguigu.gmall</groupId>
-            <artifactId>service-product-client</artifactId>
-            <version>1.0</version>
-            <scope>compile</scope>
         </dependency>
 
     </dependencies>
