--- a/common/service-util/pom.xml
+++ b/common/service-util/pom.xml
@@ -52,6 +52,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+        </dependency>
     </dependencies>
 
 
