--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>service</module>
         <module>web</module>
         <module>service-client</module>
+        <module>service</module>
     </modules>
 
     <parent>
