尚品汇商城第十二次提交 1.添加搜索关键字高亮显示 2.添加商品综合排序，默认升序
3.创建geteway模块,配置信息
4.创建两个实例

--- a/web/web-all/pom.xml
+++ b/web/web-all/pom.xml
@@ -22,6 +22,13 @@
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>service-product-client</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
 </project>
