--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>web</module>
         <module>service-client</module>
         <module>service</module>
+        <module>server-gateway</module>
     </modules>
 
     <parent>
