--- a/common/common-util/pom.xml
+++ b/common/common-util/pom.xml
@@ -30,7 +30,18 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.29</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
 
 
     </dependencies>
