--- a/server-gateway/pom.xml
+++ b/server-gateway/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.atguigu.gmall</groupId>
+            <artifactId>service-user-client</artifactId>
+            <version>1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
